image fixes
[~] adjust images to reduce usage of transparency, increasing compatibility with older browsers
[~] add width and height value to images to reduce layout shift during loading

--- a/css/blog.css
+++ b/css/blog.css
@@ -7,7 +7,7 @@ ul {
 	padding: 10px;
 	max-width: 500px;
 	margin: auto;
-	list-style-image: url('../img/cherryblossom.png');
+	list-style-image: url('../img/cherryblossom2.png');
 }
 .post-content {
 	text-align: left;
